<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tabs">

    <Button
        android:id="@+id/bVolver3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="615dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-4dp"
        android:text="@string/Regresar3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_200">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/co"
                android:icon="@drawable/ic_contacts"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/em"
                android:icon="@drawable/ic_email"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tbMessages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg"
                android:icon="@drawable/ic_messages"/>

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pageView"
            android:layout_width="match_parent"
            android:layout_height="515dp">

        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>

</RelativeLayout>